--- a/src/components/studentInfo/studentInfo.css
+++ b/src/components/studentInfo/studentInfo.css
@@ -1,3 +1,8 @@
+.coming_soon{
+    height: 20rem;
+    padding-top: 5rem;
+}
+
 .student__content p {
     text-align: left;
     color: var(--color-primary);
